--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,10 @@
 @import "{{ site.theme }}";
 .main-content {
-  h1 {
-   color: #ff0000;
- }
+    h1 {
+        color: #ff0000;
+    }
+}
+
+.markdown-body {
+    font-family: 'Times New Roman', Times, serif;
 }
