--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,13 +13,13 @@ header {
   }
 }
 
-p {
+img {
   float: left;
-  margin-right: 1em;
+  margin-right: 20px;
   clear:both;
 }
 
-img {
+p {
   margin-left: 0px;
   overflow:auto;
   display:block;
